feat(API): add Boards controller
with show endpoint
