# app/serializers/v1/board_serializer.rb
@@ -1,0 +1,20 @@
+class V1::BoardSerializer < ActiveModel::Serializer
+  type :board
+
+  attributes *Board::TRELLO_BOARD_ATTRS
+  attributes :lists, :laws
+
+  def lists
+    object.trello_lists
+  end
+
+  def laws
+    object.board_laws.map do |law|
+      {
+        id: law.id,
+        law: law.law,
+        settings: law.settings
+      }
+    end
+  end
+end
