# swagger/v1/swagger.json
@@ -65,9 +65,118 @@
         "attr-type",
         "validations"
       ]
+    },
+    "board": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        },
+        "attributes": {
+          "type": "object",
+          "properties": {
+            "tid": {
+              "type": "string"
+            },
+            "name": {
+              "type": "string"
+            },
+            "description": {
+              "type": "string"
+            },
+            "lists": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "tid": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "tid",
+                  "name"
+                ]
+              }
+            },
+            "laws": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer"
+                  },
+                  "law": {
+                    "type": "string"
+                  },
+                  "settings": {
+                    "type": "object"
+                  }
+                },
+                "required": [
+                  "id",
+                  "law",
+                  "settings"
+                ]
+              }
+            }
+          },
+          "required": [
+            "tid",
+            "name",
+            "description",
+            "lists",
+            "laws"
+          ]
+        }
+      },
+      "required": [
+        "id",
+        "type"
+      ]
     }
   },
   "paths": {
+    "/boards/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "type": "string",
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "Retrieves board",
+        "produces": [
+          "application/json"
+        ],
+        "description": "Retrieves specific board data",
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "$ref": "#/definitions/board"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "board not found"
+          }
+        }
+      }
+    },
     "/laws": {
       "get": {
         "summary": "Retrieves laws",
